--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,8 +1,8 @@
 # Change baseurl before deploy
-baseurl = "https://demo.stack.jimmycai.com"
-languageCode = "en-us"
+baseurl = "https://miskopo.github.io"
+languageCode = "en-uk"
 paginate = 5
-title = "Hugo Theme Stack Starter"
+title = "Personal Log"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
@@ -13,4 +13,4 @@ defaultContentLanguage = "en"
 hasCJKLanguage = false
 
 # Change it to your Disqus shortname before using
-disqusShortname = "hugo-theme-stack"
+disqusShortname = "miskopo"
